@@ -1,3 +1,10 @@
+2004-01-09  Jody Goldberg <jody@gnome.org>
+
+	* Makefile.am : simplify and generate the file at the last possible
+	  instant.  CLickety Click, no mor eworries about tmp files.
+	* GNOME_SettingsDaemon.server.in: restore
+	* GNOME_SettingsDaemon.server.in.in: remove
+
 2004-01-08  Glynn Foster  <glynn.foster@sun.com>
 
 	* GNOME_SettingsDaemon.server.in: Remove from CVS since it's
